// Fixes spacing issue and adds additional comments.

--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ html, body {
 }
 #cityVideo {
 	display: flex;
-	flex: 1 1 0;
+	flex: 1 1;
 	align-self: center;
 	justify-self: center;
 	max-width: 100%;
@@ -67,7 +67,7 @@ html, body {
 }
 video {
 	display: flex;
-	flex: 1 1 1;
+	flex: 1 1;
 	align-self: center;
 	justify-self: center;
 	max-width: 100%;
@@ -79,11 +79,15 @@ video {
 	justify-content: center;
 	align-items: center;
 	width: 66vw;
+	margin-top: 5%;
+	margin-bottom: 5%;
 }
 .message {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
+	margin-top: 5%;
+	margin-bottom: 5%;
 	
 }
 .nes-balloon {
@@ -107,8 +111,10 @@ video {
 #portfolio {
 	display: flex;
 	flex-direction: column;
-	align-items: flex-start;
 	width: 75vw;
+}
+.nes-btn {
+	margin: 1%;
 }
 #linktree {
 	display: flex;
